Updated correlation of sensitive parameters

--- a/Vs_lite_Exp.qmd
+++ b/Vs_lite_Exp.qmd
@@ -91,3 +91,31 @@ beech_combined <- tidyr::pivot_longer(beech_combined, -1, names_to = "variant",
 ggplot(beech_combined, aes(year, rwi)) +
   geom_line(aes(colour = variant))
 ```
+
+
+# **Correlation of sensitive parameter**
+```{r}
+Tp <- c(T1 = 0, T2 = 9, M1 = 0.01, M2 = 0.1)
+
+Tf <- vs_run_forward(Tp,
+                      input_transient$tmean,
+                      input_transient$prec,
+                      input_transient$syear,
+                      input_transient$eyear,
+                      .phi = 50,)
+
+Tc <- merge(beech_observed, Tf)
+Tc$modelled <- scale(Tc$trw)
+Tc$trw <- NULL
+Tc <- tidyr::pivot_longer(Tc, -1, names_to = "variant",
+                           values_to = "rwi")
+
+ggplot(bc3, aes(year, rwi)) +
+  geom_line(aes(colour = variant))
+
+cor (beech_combined$rwi [beech_combined$variant == "modelled"], 
+     beech_combined$rwi [beech_combined$variant == "observed"])
+
+```
+
+
