--- a/Vs_lite_Exp.qmd
+++ b/Vs_lite_Exp.qmd
@@ -123,7 +123,8 @@ cor (M2_combined$rwi [M2_combined$variant == "modelled"],
 
 ```
 
-# Calibration Run 
+## Calibration Run 
+
 ```{r}
 #| echo: true
 #| message: false
@@ -142,7 +143,8 @@ spruce_params <- vs_params(input_historic_s$trw,
 ```
 
 
-#Run model Forward
+## Run model Forward
+
 ```{r}
 input_transient_s <- make_vsinput_transient(climate_alpine)
 
@@ -155,7 +157,8 @@ spruce_forward <- vs_run_forward(spruce_params,
 ```
 
 
-# Compare model and observation
+## Compare model and observation
+
 ```{r}
 spruce_observed <- data.frame(
   year = as.numeric(rownames(spruce)),
@@ -177,7 +180,8 @@ cor (spruce_combined$rwi [spruce_combined$variant == "modelled"],
 ```
 
 
-# Correlation of sensitive parameters 
+## Correlation of sensitive parameters 
+
 ```{r}
 T2_params <- c(T1 = 6.5, T2 = 20, M1 = 0.01, M2 = 0.5)
 
